[gd_scene load_steps=6 format=3 uid="uid://ce68u7a3ukss1"]

[ext_resource type="PackedScene" uid="uid://dtalagh2i0sol" path="res://textures/spider2.glb" id="1_hifsk"]
[ext_resource type="Script" path="res://bigspider.gd" id="1_w6cxl"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7sgnu"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ybapb"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jvdnl"]

[node name="Bigspider" type="RigidBody3D"]
transform = Transform3D(-0.0256884, 0, 0.99967, 0, 1, 0, -0.99967, 0, -0.0256884, -0.790813, 0.0194707, -0.608949)
script = ExtResource("1_w6cxl")

[node name="spider2" parent="." instance=ExtResource("1_hifsk")]
transform = Transform3D(0.0251155, 0, 1.29976, 0, 1.3, 0, -1.29976, 0, 0.0251155, -0.609173, 0, 0.63899)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(2.78377, 0, -6.70552e-08, 0, 1.85224, 0, -9.68575e-08, 0, 2.91675, -0.622012, 0.51486, 0.602206)
shape = SubResource("BoxShape3D_7sgnu")

[node name="Area3D(Detection)" type="Area3D" parent="."]
transform = Transform3D(2.14883, 0, 7.45058e-09, 0, 1, 0, -1.11759e-08, 0, 2.03572, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D(Detection)"]
transform = Transform3D(61.5104, 0, -2.02656e-06, 0, 27.144, 0, 1.19209e-06, 0, 60.311, 0, 11, 0)
shape = SubResource("BoxShape3D_ybapb")

[node name="Firepoint" type="Node3D" parent="."]
transform = Transform3D(0.999994, 0.00201719, 0.00210387, -0.00201721, 0.999998, 7.67357e-06, -0.00210385, -1.19017e-05, 0.999996, -0.555207, 1.07, -4.57886)

[node name="Timer(SpitCooldown)" type="Timer" parent="."]
wait_time = 7.075
one_shot = true
autostart = true

[node name="Area3D(Hitbox)" type="Area3D" parent="." groups=["PlayerTarget"]]
transform = Transform3D(0.526924, 0, 1.49012e-08, 0, 1.30718, 0, 1.02445e-08, 0, 1.84822, -0.0172451, 0.0431178, 0.671095)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D(Hitbox)"]
transform = Transform3D(9.62667, 0, 1.49012e-08, 0, 2.772, 0, -2.38419e-07, 0, 6.8489, -0.99967, 1, -0.0256881)
shape = SubResource("BoxShape3D_jvdnl")

[node name="Timer(EggCooldown)" type="Timer" parent="."]
wait_time = 17.705
one_shot = true
autostart = true

[connection signal="body_entered" from="Area3D(Detection)" to="." method="_on_area_3d_detection_body_entered"]
[connection signal="area_entered" from="Area3D(Hitbox)" to="." method="_on_area_3d_hitbox_area_entered"]
